--- a/app/src/main/res/layout/activity_perfil_usuario.xml
+++ b/app/src/main/res/layout/activity_perfil_usuario.xml
@@ -42,47 +42,65 @@
                 android:onClick="abrirGaleria"
                 android:layout_above="@+id/correo"
                 android:layout_alignParentStart="true" />
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+
                 <TextView
                     android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:text="Nickname: "
                     android:ems="10"
                     android:id="@+id/nickNameLabel"
                     />
-                <TextView
+                <EditText
                     android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:text="@string/DEFAULT_NOMBRE_USUARIO"
                     android:ems="10"
                     android:id="@+id/nickName"
                     />
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+
+
                 <TextView
                     android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:text="Email: "
                     android:ems="10"
                     android:id="@+id/correoLabel"
                     />
 
-                <TextView
+                <EditText
 
                     android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:text="@string/DEFAULT_GRUPOS"
                     android:ems="10"
                     android:id="@+id/correo"
                     />
-            </LinearLayout>
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:text="Bio: "
+                android:ems="10"
+                android:id="@+id/bioLabel"
+                />
+
+            <EditText
+
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:inputType="textMultiLine"
+                android:text="@string/DEFAULT_GRUPOS"
+                android:ems="10"
+                android:id="@+id/bio"
+                />
+            <Button
+                android:text="Guardar cambios"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/buttonSave"
+                android:onClick="guardarInfo"
+                />
 
             <Button
                 android:text="Reiniciar contraseña"
