--- a/app/src/main/res/layout/activity_buscar_evento.xml
+++ b/app/src/main/res/layout/activity_buscar_evento.xml
@@ -22,7 +22,7 @@
         android:textColorHint="#8a939d"
         android:ems="10"
         android:fontFamily="sans-serif"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="35dp"
         android:id="@+id/textoNombreEvento"
         android:background="#eceff1"
         android:textStyle="normal"
@@ -37,7 +37,7 @@
         android:textColorHint="#8a939d"
         android:ems="10"
         android:fontFamily="sans-serif"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="35dp"
         android:id="@+id/textoLugarEvento"
         android:background="#eceff1"
         android:textStyle="normal"
@@ -96,6 +96,17 @@
         android:layout_below="@+id/toolbar"
         android:layout_alignParentStart="true" />
 
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="35dp"
+        android:id="@+id/spinner3"
+        android:background="#008040"
+        android:spinnerMode="dropdown"
+        android:entries="@array/precio_array"
+        android:layout_below="@+id/spinner"
+        android:layout_alignParentStart="true" />
+
     <ListView
         android:id="@+id/lista"
         android:layout_width="match_parent"
@@ -106,7 +117,7 @@
     <ListView
         android:id="@+id/lista2"
         android:layout_width="match_parent"
-        android:layout_height="280dp"
+        android:layout_height="265dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
 
