--- a/app/src/main/res/layout/activity_buscar_evento.xml
+++ b/app/src/main/res/layout/activity_buscar_evento.xml
@@ -121,4 +121,28 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
 
+    <CalendarView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/calendar"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/spinner3"
+        android:layout_marginTop="35dp"
+        android:background="#FFF"/>
+
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:inputType="textPersonName"
+        android:hint="@string/ESCRIBE_DIA_EVENTO"
+        android:textColorHint="#8a939d"
+        android:ems="10"
+        android:fontFamily="sans-serif"
+        android:layout_marginTop="35dp"
+        android:id="@+id/textoDiaEvento"
+        android:background="#eceff1"
+        android:textStyle="normal"
+        android:layout_below="@+id/spinner"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
