--- a/app/src/main/res/layout/activity_ver_info_grupo.xml
+++ b/app/src/main/res/layout/activity_ver_info_grupo.xml
@@ -46,8 +46,6 @@
                 android:layout_width="match_parent"
                 android:id="@+id/nombreGrupo"
                 android:fontFamily="sans-serif"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
                 android:textSize="28sp"
                 android:textColor="#000"
                 android:layout_below="@+id/imagenGrupo"
@@ -61,24 +59,17 @@
                 android:layout_width="match_parent"
                 android:id="@+id/descr"
                 android:fontFamily="sans-serif"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
                 android:textSize="16sp"
                 android:textColor="#000"
                 android:layout_below="@+id/nombreGrupo"
-                android:layout_alignParentStart="true"
                 android:layout_height="20dp"
                 android:background="#fff"
-                android:textStyle="normal|bold"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp" />
+                android:textStyle="normal|bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:id="@+id/descripcion"
                 android:fontFamily="sans-serif"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
                 android:textSize="16sp"
                 android:textColor="#000"
                 android:layout_below="@+id/descr"
@@ -86,8 +77,6 @@
                 android:paddingTop="5dp"
                 android:scrollbars = "vertical"
                 android:background="#fff"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
                 android:layout_height="match_parent" />
 
             <TextView
@@ -95,57 +84,55 @@
                 android:layout_width="match_parent"
                 android:id="@+id/etiquetas"
                 android:fontFamily="sans-serif"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
                 android:textSize="16sp"
                 android:textColor="#000"
                 android:scrollbars="vertical"
                 android:background="#fff"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
                 android:layout_below="@+id/descripcion"
                 android:layout_centerHorizontal="true"
                 android:textStyle="normal|bold"
                 android:layout_marginTop="10dp"
                 android:layout_height="21dp" />
 
-            <LinearLayout
+            <HorizontalScrollView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:layout_marginTop="6dp"
-                android:id="@+id/Tags"
-                android:layout_below="@+id/etiquetas">
+                android:layout_below="@+id/etiquetas"
+                android:id="@+id/Horizontal"
+                android:scrollbars="none">
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=""
-                    android:paddingBottom="3dp"
-                    android:paddingLeft="3dp"
-                    android:paddingRight="3dp"
-                    android:paddingTop="3dp"
-                    android:id="@+id/Primero" />
+                    android:layout_marginTop="6dp"
+                    android:id="@+id/Tags">
 
-            </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:paddingBottom="3dp"
+                        android:paddingLeft="3dp"
+                        android:paddingRight="3dp"
+                        android:paddingTop="3dp"
+                        android:id="@+id/Primero" />
+
+                </LinearLayout>
+
+            </HorizontalScrollView>
 
             <TextView
                 android:text="@string/DEFAULT_EVENTOS"
                 android:layout_width="match_parent"
                 android:id="@+id/EventosTitulo"
                 android:fontFamily="sans-serif"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
                 android:textSize="16sp"
                 android:textColor="#000"
                 android:scrollbars="vertical"
                 android:background="#fff"
                 android:textStyle="normal|bold"
                 android:layout_height="24dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:layout_below="@+id/Tags"
+                android:layout_below="@+id/Horizontal"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="6dp" />
 
@@ -154,7 +141,6 @@
                 android:id="@+id/event"
                 android:layout_below="@+id/EventosTitulo"
                 android:layout_alignStart="@+id/EventosTitulo"
-                android:layout_marginRight="15dp"
                 android:layout_height="155dp" />
 
 
