--- a/app/src/main/res/layout/activity_perfil_usuario.xml
+++ b/app/src/main/res/layout/activity_perfil_usuario.xml
@@ -109,6 +109,7 @@
 
             <com.twitter.sdk.android.core.identity.TwitterLoginButton
                 android:id="@+id/twitter_login_button"
+                android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"/>
