--- a/app/src/main/res/layout/activity_indicar_tags.xml
+++ b/app/src/main/res/layout/activity_indicar_tags.xml
@@ -40,7 +40,7 @@
             android:text="Recuerda que debes escoger un mínimo de 3 tags"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView"
+            android:id="@+id/tagsMinimos"
             android:layout_marginRight="10dp"
             android:layout_alignTop="@+id/button4"
             android:layout_alignStart="@+id/editText"
