--- a/app/src/main/res/layout/activity_ver_info_grupo.xml
+++ b/app/src/main/res/layout/activity_ver_info_grupo.xml
@@ -95,8 +95,9 @@
                 android:layout_height="21dp" />
 
             <HorizontalScrollView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#fff"
                 android:layout_below="@+id/etiquetas"
                 android:id="@+id/Horizontal"
                 android:scrollbars="none">
@@ -104,17 +105,18 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="6dp"
-                    android:id="@+id/Tags">
+                    android:layout_marginTop="7dp"
+                    android:id="@+id/Tags"
+                    android:layout_marginBottom="7dp">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=""
-                        android:paddingBottom="3dp"
+                        android:paddingBottom="2dp"
                         android:paddingLeft="3dp"
                         android:paddingRight="3dp"
-                        android:paddingTop="3dp"
+                        android:paddingTop="2dp"
                         android:id="@+id/Primero" />
 
                 </LinearLayout>
@@ -134,7 +136,7 @@
                 android:layout_height="24dp"
                 android:layout_below="@+id/Horizontal"
                 android:layout_alignParentStart="true"
-                android:layout_marginTop="6dp" />
+                android:layout_marginTop="7dp" />
 
             <ListView
                 android:layout_width="match_parent"
